<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_orders">

    <!-- Orders Fragment -->
    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.billo.app.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <!-- Tab Fragment -->
    <fragment
        android:id="@+id/navigation_tab"
        android:name="com.billo.app.ui.tab.TabFragment"
        android:label="@string/title_tab"
        tools:layout="@layout/fragment_tab" />

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.billo.app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
